# faro-connect

./: CMakeLists.txt  README.md  package.xml
server_client/: CMakeLists.txt~  package.xml  package.xml~
server_client/src/: averaging_client.cpp~  server_client.cpp~
src/: server_client.cpp
